# taradino

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile_old  README  README.md  _rt_draw.h  _rt_floo.h  _rt_game.h  _rt_menu.h  _rt_play.h  _rt_str.h  _rt_ted.h  _rt_util.h  _z_zone.h  build.zig  byteordr.c  byteordr.h  cin_efct.c  cin_evnt.c  cin_glob.c  cin_glob.h  cin_main.c  cin_util.c  configure.ac  develop.h  dosutil.c  engine.c  engine.h  f_scale.asm  fli_def.h  fli_type.h  fli_util.c  fx_man.c  fx_man.h  isr.c  lookups.c  modexlib.c  (+71 more)
.github/workflows/: main.yml  packages.yml
debian/: README.Debian  README.source  changelog  clean  config  control  copyright  dirs  docs  install  manpages  menu  postinst  prerm  rott.docs  rott.install  rott.links  rott.lintian-overrides  rott.manpages  rott.menu  rott.postinst  rott.preinst  rott.prerm  rules  templates  watch
debian/manpage/: rott.6
debian/patches/: 00-disable-audiolib.patch  00-ludicrous-gibs.patch  00-registered-version.patch  00list  01-custom-datapath.dpatch  01-demo-datadir.patch  02-gcc41.dpatch  02-persistent-typo.patch  03-fullscreen-hack.dpatch  03-parameter-typo.patch  04-alt-gr.dpatch  04-objs-depend-on-develop_h.patch  05-big-endian-fix.dpatch  06-touchplate-fix.dpatch  10-all-variants.patch  11-new-fix32.dpatch  12-fix-char-byte.dpatch  13-improve-makefile.dpatch  14-fix-modex-ptr.dpatch  16-fix-random-actors.dpatch  17-no-newline-in-addmessage.dpatch  18-fix-drawichar.dpatch  19-playerarrow.dpatch  20-printf-no-long.dpatch  21-no-soundsetup.dpatch  30-svn-210.dpatch  31-svn-211.dpatch  33-svn-213.dpatch  35-svn-215ab.dpatch  36-svn-216.dpatch  37-svn-217c.dpatch  39-svn-219.dpatch  41-svn-221.dpatch  99-registered-version.dpatch  conflicting_types.patch  desktop-file.patch  drawsky.patch  fogshade.patch  format-security.patch  no-files-found-dialog.patch  (+5 more)
debian/po/: cs.po  da.po  de.po  es.po  fi.po  fr.po  gl.po  nl.po  pt.po  pt_BR.po  ru.po  sv.po  ta.po  templates.pot
debian/source/: include-binaries
doc/: 13todo.txt  cheats.txt  cmdline.txt  hacker.txt  readme.txt  rott.6  taradino.6.in
mac/English.lproj/: InfoPlist.strings
mac/Rise of the Triad.pbproj/: project.pbxproj
misc/: icons.mk  index.html  rott.desktop  rott.xpm  runrott.sh  taradino.desktop.in  taradino.rc  taradino.xpm
rott/: Makefile  Makefile.am  Makefile_old  WinRott.h  _engine.h  _rt_acto.h  _rt_buil.h  _rt_com.h  _rt_dman.h  _rt_door.h  _rt_draw.h  _rt_floo.h  _rt_game.h  _rt_in.h  _rt_main.h  _rt_map.h  _rt_menu.h  _rt_msg.h  _rt_net.h  _rt_play.h  _rt_rand.h  _rt_scal.h  _rt_soun.h  _rt_stat.h  _rt_str.h  _rt_swft.h  _rt_ted.h  _rt_util.h  _rt_vid.h  _w_wad.h  adlmusic.c  byteordr.c  cin_actr.c  cin_actr.h  cin_def.h  cin_efct.c  cin_efct.h  cin_evnt.c  cin_evnt.h  cin_glob.c  (+141 more)
rott/audiolib/: _multivc.h  dpmi.h  dsl.c  fx_man.c  fx_man.h  multivoc.c  multivoc.h  mvreverb.c  nodpmi.c  platform.h
vs.net/: rott.vcproj
