bin_PROGRAMS = rott@SUFFIX@
rott@SUFFIX@_SOURCES = \
	byteordr.c \
	cin_actr.c \
	cin_efct.c \
	cin_evnt.c \
	cin_glob.c \
	cin_main.c \
	cin_util.c \
	dosutil.c \
	dukemusc.c \
	engine.c \
	fx_mixer.c \
	isr.c \
	m_misc2.c \
	modexlib.c \
	rt_actor.c \
	rt_battl.c \
	rt_build.c \
	rt_cfg.c \
	rt_com.c \
	rt_crc.c \
	rt_datadir.c \
	rt_debug.c \
	rt_dmand.c \
	rt_door.c \
	rt_draw.c \
	rt_err.c \
	rt_floor.c \
	rt_game.c \
	rt_in.c \
	rt_main.c \
	rt_map.c \
	rt_menu.c \
	rt_msg.c \
	rt_net.c \
	rt_playr.c \
	rt_rand.c \
	rt_scale.c \
	rt_sound.c \
	rt_sqrt.c \
	rt_stat.c \
	rt_state.c \
	rt_str.c \
	rt_ted.c \
	rt_util.c \
	rt_vid.c \
	rt_view.c \
	scriplib.c \
	watcom.c \
	winrott.c \
	w_wad.c \
	z_zone.c
rott@SUFFIX@_CFLAGS = @SDL_CFLAGS@ @SDL_mixer_CFLAGS@
rott@SUFFIX@_LDADD = @SDL_LIBS@ @SDL_mixer_LIBS@
